# dma_bench

./: CMakeLists.txt  benchmark.sh
src/: core.c  main.c  params.c
src/include/: common.h  core.h  params.h
